<?xml version="1.0"?>
<package format="3">
  <name>openslam_gmapping</name>
  <version>0.0.0</version>
  <description>ROS2 port of openslam gmapping</description>

  <maintainer email="rodrigo.salas@amtc.uchile.cl">Rodrigo Salas</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
